--- a/index.html
+++ b/index.html
@@ -2,36 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GOOGLE SHAPES QR CODE GENERATOR</title>
   <link rel="icon" href="https://fav.farm/🌀" />
 
-  <!-- Custom Cursor -->
   <style>
+    /* Custom Cursor */
     body {
-      cursor: url('https://cur.cursors-4u.net/games/gam-16/gam1514.cur'), auto;
-      background: #f4f4f8;
+      cursor: url('https://cdn-icons-png.flaticon.com/512/32/32355.png'), auto;
       font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f4f8;
       margin: 0;
       padding: 0;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .dark {
+      background-color: #111;
+      color: white;
     }
 
     .container {
+      max-width: 600px;
+      margin: 3rem auto;
       text-align: center;
       padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      background-color: white;
+    }
+
+    .dark .container {
+      background-color: #1e1e1e;
+      box-shadow: 0 0 15px rgba(255,255,255,0.1);
     }
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 2rem;
       margin-bottom: 1rem;
     }
 
     input, select, button {
       padding: 0.7rem;
       margin: 0.5rem;
-      border: 1px solid #ccc;
       border-radius: 8px;
       font-size: 1rem;
+      border: 1px solid #ccc;
     }
 
     button {
@@ -39,30 +55,24 @@
       color: white;
       border: none;
       cursor: pointer;
-      transition: background 0.3s;
     }
 
     button:hover {
       background-color: #45a049;
     }
 
-    .theme-dark {
-      background: #111;
-      color: white;
-    }
-
-    .qr-container {
+    .qr-output {
       margin-top: 2rem;
     }
 
     #loading {
       display: none;
       margin: 1rem auto;
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #4CAF50;
-      border-radius: 50%;
       width: 40px;
       height: 40px;
+      border: 5px solid #ddd;
+      border-top: 5px solid #4CAF50;
+      border-radius: 50%;
       animation: spin 1s linear infinite;
     }
 
@@ -75,33 +85,32 @@
 <body>
   <div class="container">
     <h1>GOOGLE SHAPES QR CODE GENERATOR</h1>
-    <input type="text" id="linkInput" placeholder="Enter website link" size="40" />
-    <select id="themeSelect">
-      <option value="dots">Google Dots</option>
+    <input type="text" id="urlInput" placeholder="Enter website URL" size="40">
+    <br>
+    <select id="styleSelect">
       <option value="classic">Classic</option>
+      <option value="dots">Google Shapes</option>
     </select>
-    <button onclick="generateQR()">Generate QR Code</button>
-    <button onclick="toggleTheme()">Toggle Theme</button>
+    <button onclick="generateQR()">Generate QR</button>
+    <button onclick="toggleDark()">Toggle Theme</button>
 
     <div id="loading"></div>
-    <div class="qr-container" id="qrContainer"></div>
+    <div class="qr-output" id="qrContainer"></div>
   </div>
 
   <script>
-    const loading = document.getElementById("loading");
-    const container = document.getElementsByClassName("container")[0];
-
-    function toggleTheme() {
-      container.classList.toggle("theme-dark");
+    function toggleDark() {
+      document.body.classList.toggle('dark');
     }
 
     function generateQR() {
-      const url = document.getElementById("linkInput").value.trim();
-      const theme = document.getElementById("themeSelect").value;
+      const url = document.getElementById("urlInput").value.trim();
+      const style = document.getElementById("styleSelect").value;
       const qrContainer = document.getElementById("qrContainer");
+      const loading = document.getElementById("loading");
 
       if (!url) {
-        alert("Please enter a URL.");
+        alert("Please enter a valid URL");
         return;
       }
 
@@ -109,22 +118,25 @@
       loading.style.display = "block";
 
       setTimeout(() => {
-        let qrUrl = "";
-        if (theme === "classic") {
-          qrUrl = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(url)}&size=250x250`;
+        loading.style.display = "none";
+        let qrURL = "";
+
+        if (style === "classic") {
+          qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(url)}&size=250x250`;
         } else {
-          qrUrl = `https://qrtiger.com/qr?url=${encodeURIComponent(url)}`;
+          // Placeholder for a custom-styled Google QR (could be swapped with another API or image later)
+          qrURL = `https://qrtiger.com/qr?url=${encodeURIComponent(url)}`;
         }
 
         const img = document.createElement("img");
-        img.src = qrUrl;
+        img.src = qrURL;
         img.alt = "QR Code";
-        img.style.marginTop = "1rem";
+        img.style.maxWidth = "100%";
         img.style.borderRadius = "16px";
-        qrContainer.appendChild(img);
+        img.style.marginTop = "1rem";
 
-        loading.style.display = "none";
-      }, 1000);
+        qrContainer.appendChild(img);
+      }, 1200);
     }
   </script>
 </body>
